2016-09-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 39305: Src/exec.c: error handling on substitution for here
	document was illogical.

2016-09-12  Oliver Kiddle  <opk@zsh.org>

	* 39295: Completion/Unix/Type/_remote_files: allow '--' to
	appear in the command line passed as an argument

	* 39287: Completion/Unix/Command/_graphicsmagick,
	Completion/Unix/Command/_imagemagick, Completion/X/Command/_okular:
	add .tif as a valid extension for TIFF files

2016-09-12  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/mod_sched.yo: reference use of widgets to
	effect editor changes from a sched command

	* 39297: Doc/Zsh/compsys.yo: more of 39284, it's painful to add
	texi nodes in yodl

2016-09-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 39255: Doc/Zsh/cond.yo: = in conditions is not actually going
	to be removed.

2016-09-11  Barton E. Schaefer  <schaefer@zsh.org>

	* 39268: Src/Modules/system.c: "zsystem flock -t 0 ..." tries only
	once to flock and immediately returns success or failure

2016-09-11  Vin Shelton  <ethersoft@gmail.com>

	* 39284: Doc/Zsh/compsys.yo: Added Completion System Variables as
	a menu item

2016-09-11  Oliver Kiddle  <opk@zsh.org>

	* 39261 (tweaked cf. Daniel: 39275): Doc/Zsh/compsys.yo:
	Completion/Base/Core/_main_complete,
	Completion/Base/Utility/_call_program,
	Completion/Debian/Command/_dchroot,
	Completion/Debian/Command/_dchroot-dsa,
	Completion/Debian/Command/_schroot,
	Completion/Solaris/Command/_pfexec,
	Completion/Solaris/Command/_zlogin, Completion/Unix/Command/_dsh,
	Completion/Unix/Command/_fsh, Completion/Unix/Command/_libvirt,
	Completion/Unix/Command/_mosh, Completion/Unix/Command/_rlogin,
	Completion/Unix/Command/_ssh, Completion/Unix/Command/_sudo:
	don't unconditionally gain privileges with sudo for completion

2016-09-11  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39252: Src/Zle/compcore.c, Src/Zle/compctl.c,
	Src/Zle/computil.c, Src/Zle/zle_misc.c, Src/Zle/zle_tricky.c,
